--- a/index.html
+++ b/index.html
@@ -1,51 +1,90 @@
-<!-- Elias aquí está la documentación de como jala este código de manera lo más sencilla posible --> 
+<!-- Elias aquí está la documentación de como jala este código de manera lo más sencilla posible -->
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>ERP System</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 </head>
+
 <body>
+    <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 login_form">
+            <h2>Inicio de sesión</h2>
+            <form action="login" method="post" id="loginForm">
+                <div class="row">
+                    <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
+                    <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
+                        <label for="user_name" class="control-label">Usuario</label>
+                        <input type="text" id="user_name" name="usuario" required>
+                    </div>
+                    <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
+                </div>
 
-    <div class="formulario">
-        <h1>Inicio de sesión</h1>
-        <form action="login" method="post" id="loginForm">
-            <div class="usuario">
-                <input type="text" id="usuario" name="usuario" required>
-                <label for="usuario">Nombre de usuario</label>
-            </div>
-            <div class="contrasena">
-                <input type="password" id="clave" name="contrasena" required>
-                <label for="clave">Contraseña</label>
-            </div>
-
-            <input type="submit" value="Iniciar">
-            <div id="mensaje_de_error"></div>
-        </form>
+                <div class="row">
+                    <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
+                    <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10 text-left">
+                        <label for="password_user">Contraseña</label>
+                        <input type="password" id="password_user" name="contrasena" required>
+                    </div>
+                    <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-3 col-md-3 col-lg-3 col-xl-3"></div>
+                    <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                        <input type="submit" class="button_login" id="btn_ingresar" value="Iniciar">
+                    </div>
+                    <div class="col-sm-3 col-md-3 col-lg-3 col-xl-3"></div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
+                        <div id="mensaje_de_error">Mensaje de error</div>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 
+
+
+
+    <!---Logica del login-->
     <script>
         let intentos = 0; // Aquí creamos una variable para contar cuántos intentos de inicio de sesión ha hecho el usuario, porque haremos validación y si supera el límite de 3 intentos se bloqueará todo.
 
-        document.getElementById('loginForm').onsubmit = function(event) // Cuando el usuario presiona el botón, la función se ejecuta para que haga tooodo lo que se le dijo al programa
+        document.getElementById('loginForm').onsubmit = function (event) // Cuando el usuario presiona el botón, la función se ejecuta para que haga tooodo lo que se le dijo al programa
         {
-            const usuario = document.getElementById('usuario').value; // Obtenemos el valor de la cajita de usuario.
-            const contrasena = document.getElementById('clave').value; // Obtenemos el valor de la cajita de contraseña.
-            if (usuario === "" || contrasena === "") // Si el usuario o la contraseña están vacíos, los manda a volar para que no haya problemas...
-            { 
-                alert("Usuario y contraseña son obligatorios."); // Aquí se mostrará un un mensaje de error, para que pongan atención y sepan en que la andan regando.
+            const usuario = document.getElementById('user_name').value; // Obtenemos el valor de la cajita de usuario.
+            const contrasena = document.getElementById('password_user').value; // Obtenemos el valor de la cajita de contraseña.
+
+            usuario.oninvalid = function (event) {
+                event.target.setCustomValidity('Por favor, ingrese su usuario.');
+            }
+            contrasena.oninvalid = function (event){
+                event.target.setCustomValidity('Por favor, ingrese la contraseña.');
+            }
+            usuario.oninput = function (event) {
+                event.target.setCustomValidity('');
+            }
+            /*if (usuario === "" || contrasena === "") // Si el usuario o la contraseña están vacíos, los manda a volar para que no haya problemas...
+            {
+                MensajeSuperior("Usuario y contraseña son obligatorios.", "warning"); // Aquí se mostrará un un mensaje de error, para que pongan atención y sepan en que la andan regando.
                 event.preventDefault(); // Evitamos que el formulario se recargue por asi decirlo, osea recargar la página literalmente hablando.
                 return;
-            }
+            }*/
 
             if (usuario === "alumno" && contrasena === "dasc") // Si el usuario y la contraseña son correctos (y ANTES de equivocarse 3 veces), pues ya deja al usuario pasar a la siguiente página
-            { 
-                alert("Inicio de sesión exitoso"); // Mostramos un mensaje que se logró acceder, para que el usuario no ande con la duda
-                window.location.href = "https://www.youtube.com"; // Redirigimos al usuario a YouTube por ejemplo, aqui realmente sería lo del servidor pero todavía no se ha creado
+            {
+                
+                MensajeSuperior("Iniciando sesion. . .", "success"); // Mostramos un mensaje que se logró acceder, para que el usuario no ande con la duda
+                //window.location.href = "https://github.com"; // Redirigimos al usuario a YouTube por ejemplo, aqui realmente sería lo del servidor pero todavía no se ha creado
+                console.dir(usuario, contrasena)
                 const datos = { // Creamos una constante llamada datos, que almacenara en forma de objeto de javascript los datos de usuario y contraseña, porque nos interesa trabajar con servidor por lo que ocupamos juntar esos datos
                     usuario: usuario,
                     contrasena: contrasena
@@ -53,21 +92,47 @@
                 const datosJson = JSON.stringify(datos); //Creamos una variable llamada datosJson y se convertirá a una cadena de texto JSON, porque lo requerimos.
                 console.log(datosJson);
             } else // Si el usuario o la contraseña son incorrectos, nos manda para esta parte...
-            { 
-                intentos++; // Sumamos 1 al contador de intentos. se irá incrementando conforme se vayan equivocando.
+            {
+                intentos = 0; // Sumamos 1 al contador de intentos. se irá incrementando conforme se vayan equivocando.
                 if (intentos >= 4) // Si el usuario ha hecho 4 o más intentos, aqui se especifica que le pasará al login
-                { 
-                    alert("Has alcanzado el número máximo de intentos. Debido a eso el formulario se bloqueará."); // Mostramos un mensaje de error, con el fin de brindar más seguridad
+                {
+                    MensajeSuperior("Has alcanzado el número máximo de intentos. Debido a eso el formulario se bloqueará.", "warning"); // Mostramos un mensaje de error, con el fin de brindar más seguridad
                     document.getElementById('usuario').disabled = true; // Desactivamos el campo de usuario, por lo que ya no se podrá usar
                     document.getElementById('clave').disabled = true; // Desactivamos el campo de contraseña, por lo que ya no se podrá usar
                     document.querySelector('input[type="submit"]').disabled = true; // Desactivamos el botón "Iniciar", por lo que ya no se podrá usar
                     event.preventDefault(); // Evitamos que el formulario se envíe, porque no tiene caso sino logró acceder
                 } else { // Si el usuario ha hecho menos de 4 intentos, entra en esta última validación
-                    alert("Usuario y/o contraseña incorrectas. Intento " + intentos + " de 3."); // Mostramos un mensaje de error notificando los intentos erróneos
+                    MensajeSuperior("Usuario y/o contraseña incorrectas.", "error"); // Mostramos un mensaje de error notificando los intentos erróneos
                     event.preventDefault(); // Evitamos que se recargue la página y se envíen los datos.
                 }
             }
         };
+
+
+        ///Parametros para la posicion del dialogo de mensajes.
+        ///En espera para habilitar las request del backend y darle formatos
+        function MensajeSuperior(mensaje, accion) {
+            Swal.fire({
+                position: 'center',
+                icon: accion,
+                title: mensaje,
+                showConfirmButton: false,
+                customClass: {
+                    popup: 'estiloPop'
+                },
+                timer: 3000
+            });
+        }
+
+        /*Parametros para el mensaje estilo pop
+        'success', 'error', 'warning', 'info',
+        */
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+
 </html>
