--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 const MensajeError = document.getElementById('mistake').value;
                 const enviar_registros_backend = async (datos) => {
                     try {
-                        const response = await fetch('http://URL_SERVER:PORT/login', {
+                        const response = await fetch('http://localhost:8080/api/login', {
                             method: 'POST',
                             headers: {
                             'Content-Type': 'application/json'
