--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
   </div>
 
-  <button onclick="getBackendIP()">REGISTER IP</button>
+  <button onclick="setBackendIP()">REGISTER IP</button>
 </body>
 
   <script>
