--- a/index.html
+++ b/index.html
@@ -283,8 +283,9 @@
 
     // Login hanlder
     // Function to prompt for the backend IP and store it
+
 function getBackendIP() {
-  let backendIP = localStorage.getItem('backendIP');
+   backendIP = localStorage.getItem('backendIP');
 
   if (!backendIP) {
     backendIP = prompt("Enter backend IP (e.g., 192.168.18.X):", "192.168.18.4");
@@ -301,7 +302,7 @@ function getBackendIP() {
 
 
 function setBackendIP() {
-  let backendIP = localStorage.getItem('backendIP');
+   backendIP = localStorage.getItem('backendIP');
 
  
     backendIP = prompt("Enter backend IP (e.g., 192.168.18.X):", "192.168.18.4");
@@ -330,7 +331,7 @@ document.getElementById('login-form').addEventListener('submit', async (e) => {
   const errorMessage = document.getElementById('error-message');
 
   try {
-    const response = await fetch(`http://${backendIP}:3000/login`, {
+    const response = await fetch(`http://192.168.18.24:3000/login`, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ username, password })
