--- a/index.html
+++ b/index.html
@@ -316,13 +316,17 @@ document.getElementById('login-form').addEventListener('submit', async (e) => {
   const errorMessage = document.getElementById('error-message');
 
   try {
-    const response = await fetch(`http://192.168.18.24:3000/login`, {
+    const response = await fetch('http://'+ backendIP +':3000/login', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ username, password })
     });
 
+    console.log("antes de obtener el data");
     const data = await response.json();
+
+    console.log("despues de obtener el data");
+    console.log("",data);
 
     if (response.ok) {
       localStorage.setItem('authToken', data.token);
