--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ document.getElementById('login-form').addEventListener('submit', async (e) => {
     /////////////////       BUSQUEDA OBJETOS       ////////////////////////////////////////////
     async function loadItems() {
       const token = localStorage.getItem("authToken");
-      const response = await fetch("http://${backendIP}:3000/MOSTRADOR/buscar-objetos/", { headers: { "Authorization": `Bearer ${token}` } });
+      const response = await fetch("http://'+ backendIP +':3000/MOSTRADOR/buscar-objetos/", { headers: { "Authorization": `Bearer ${token}` } });
       console.log("Token:", localStorage.getItem("authToken"));
 
       if (!response.ok) {
@@ -432,7 +432,7 @@ function submitSale() {
     return;
   }
 
-  fetch("http://${backendIP}:3000/MOSTRADOR/registro-venta/", {
+  fetch("http://'+ backendIP +':3000/MOSTRADOR/registro-venta/", {
     method: "POST",
     headers: { 
       "Authorization": `Bearer ${token}`,
