--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@ document.getElementById('login-form').addEventListener('submit', async (e) => {
       } else {
         showUserRole(null);
       }
+      console.log("aaaaaaaaaaa");
     });
 
 
