--- a/index.html
+++ b/index.html
@@ -311,12 +311,13 @@ document.getElementById('login-form').addEventListener('submit', async (e) => {
 
   if (!backendIP) return; // Stop if no IP is set
 
+  
   const username = document.getElementById('username').value;
   const password = document.getElementById('password').value;
   const errorMessage = document.getElementById('error-message');
 
   try {
-    const response = await fetch('http://'+ backendIP +':3000/login', {
+    const response = await fetch('http://192.168.18.24:3000/login', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ username, password })
