--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     .content-section {
       min-width: 100%;
       min-height: 100%;
-      display: none;
       border-radius: 5px;
       justify-content: center;
       padding: 10px;
@@ -95,76 +94,85 @@
       margin: 20px 0;
     }
 
-    .action-button {
-      background-color: #007bff;
-      color: white;
-      padding: 8px 16px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      margin: 5px;
-    }
+    /* From Uiverse.io by ahmed150up */ 
+.login-card {
+  width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #e8e8e8;
+  box-shadow: 2px 2px 10px #ccc;
+}
 
-    .form-group {
-      margin-bottom: 15px;
-    }
+.card-header {
+  text-align: center;
+  margin-bottom: 20px
+}
 
-    .form-group label {
-      display: block;
-      margin-bottom: 5px;
-    }
+.card-header .log {
+  margin: 0;
+  font-size: 24px;
+  color: black;
+}
 
-    .form-group input {
-      width: 100%;
-      padding: 8px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
+.form-group {
+  margin-bottom: 15px;
+}
 
+label {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
 
+input[type="text"], input[type="password"] {
+  width: 100%;
+  padding: 12px 20px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
 
-    .form-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+input[type="submit"] {
+  width: 100%;
+  background-color: #333;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
 
-    .form-container {
-      background: white;
-      padding: 20px;
-      border-radius: 5px;
-      max-width: 500px;
-      width: 100%;
-    }
+input[type="submit"]:hover {
+  background-color: #ccc;
+  color: black;
+}
   </style>
 </head>
 
 <body>
   <!-- Login  -->
   <div class="row">
-    <div class="col-md-3"></div>
-    <div id="login-content" class="content-section col-md-6">
-      <h2>Login</h2>
+    <div id="login-content" class="login-card">
+      <div class="card-header">
+        <div class="log">Login</div>
+      </div>
       <form id="login-form">
         <div class="form-group">
-          <label for="username">Usuario</label>
+          <label for="username">Usuario:</label>
           <input type="text" id="username" required>
         </div>
         <div class="form-group">
-          <label for="password">Contraseña</label>
+          <label for="password">Contraseña:</label>
           <input type="password" id="password" required>
         </div>
         <button type="submit" class="action-button">Login</button>
       </form>
       <div id="error-message"></div>
     </div>
-    <div class="col-md-3"></div>
   </div>
 
   <div class="row">
@@ -201,7 +209,7 @@
         </nav>
       </div>
 
-      <div class="d-flex menu">
+      <div class="d-flex">
         <nav class="bg-dark text-white p-3 vh-100 d-none d-md-block" style="width: 250px;">
           <h4>ERPSYSTEM</h4>
           <ul class="nav flex-column">
@@ -355,7 +363,7 @@
     let backendIP = localStorage.getItem('backendIP');
 
     //if (!backendIP) {
-    backendIP = prompt("Enter backend IP (e.g., 192.168.18.X):", "192.168.18.4");
+    backendIP = prompt("Enter backend IP (e.g., 192.168.18.X):", "192.168.100.83");
     if (backendIP) {
       localStorage.setItem('backendIP', backendIP);
     } else {
@@ -464,11 +472,11 @@
   /////////////////       BUSQUEDA PRODUCTOS       ////////////////////////////////////////////
   async function loadItems() {
     const token = localStorage.getItem("authToken");
-    const response = await fetch(`http://${backendIP}:3000/MOSTRADOR/buscar-objetos/`, {
+    const response = await fetch(`http://${backendIP}:3000/MOSTRADOR/buscar-objetos`, {
       headers: { "Authorization": `Bearer ${token}` }
     });
     console.log("Token:", localStorage.getItem("authToken"));
-
+    console.dir(response);
     if (!response.ok) {
       console.error("Error al obtener el producto");
       return;
